css/responsive.css
/* This file contains all of the css to make this page responsive */

@media (max-width: 550px){
    ul.myNav{
        text-align: center;
        padding-top: 0em;
    }

    ul.myNav li a{
        font-size: 1em;
    }

    header h2{
        text-align: center;
        font-size: 2em;
    }

    header h5{
        text-align: center;
        /* font-size: 20em; */
    }

    .myMenu li{
        float: none;
    }

    ul.myNav{
        float: none;

        /* centers nav left-right within its container */
        width: 100%;
        text-align: center;
    }

    .imageHolder{
        max-width: 100%;
    }
    .main{
        padding: 0;
        margin: 0;
        width: 100%;
        
    }

    
    .portfolioLink{
        margin-left: 0;
        padding: 0;
        float: none;
        /* margin-top: 1em; */
        width: 0px;
        /* margin-bottom: 1em; */
        
    }
    
    .about{
        margin: 0;
        padding: 0;  
    }
    
    .resumeHolder{
        margin: 0;
        padding: 0;
        text-align: center;
        width: 100vw;
    }
    
    embed{
        width: 100%;
        height: 100%;
    }
    
    /* .portfolio{
        width: 
    }*/
    
    .portfolioItem{
        width: 100%;
        padding: .2em;
        margin: 0;
        float: none;
        /* border: red 2px solid; */
    } 

    
    .imageHolder img{
        max-width: 100%;
        
    }
    .portfolioContainer{
        padding: 0;
        /* margin-left: 0; */
        /* float: left; */
        float: none;
        text-align: center;
        width: 100%;
        /* border: red 2px solid;         */
    }
}

/* @media (max-width: 550px){
    .about{
        
    }
} */

@media (max-width: 1008px){
    .portfolioItem{
        margin-top: 1%;
    }

    /* .portfolioContainer .six{
        width: 100%;
    } */
}

